<resources>
    <string name="app_name">Walk Assistent</string>
    <string name="tab_text_1">My Activity</string>
    <string name="tab_text_2">Challenges</string>
    <string name="tab_text_3">Profile</string>
    <!--text-->
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone number</string>
    <string name="personalInfo">Personal information</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="steps">Steps</string>
    <string name="stepLength">Step length</string>
    <string name="stepGoal">Step goal</string>
    <string name="seeFriends">SEE FRIENDS</string>
    <string name="editAccount">Edit account</string>
    <string name="signOut">Sign Out</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <!--image descriptions-->
    <string name="descrLogo">Logo</string>
    <string name="descrSteps">Image with steps</string>
    <string name="descrCalories">Image with fire(calories)</string>
    <string name="descrDistance">Image with distance</string>
    <string name="descrTime">Image with timer</string>
    <string name="descrSpeed">Image with speed</string>
    <string name="descrProfilePicture">Profile picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--notification text-->
    <string name="notification_login_success">Logarea s-a realizat cu succes!</string>
    <string name="notification_login_failure">Logarea nu s-a putut realiza!</string>
</resources>