<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreateAccountFragment"
    android:background="@drawable/backgroundd">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/firstname"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/input_round"
            android:inputType="text"
            android:hint="type here..."
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lastname"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/input_round"
            android:inputType="text"
            android:hint="type here..."
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/input_round"
            android:inputType="textEmailAddress"
            android:hint="type here..."
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/input_round"
            android:inputType="phone"
            android:hint="type here..."
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/input_round"
            android:inputType="textPassword"
            android:hint="type here..."
            android:textSize="20sp"/>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:background="@drawable/button_round_edges"
            android:text="@string/createAccount"/>
    </LinearLayout>

</FrameLayout>