<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundd"
    tools:context=".ui.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="50dp"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/roundedImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/app_icon"
                android:contentDescription="@string/descrLogo"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/email_input"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@drawable/input_round"
                android:inputType="textEmailAddress"
                android:hint="type here..."
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/password_input"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@drawable/input_round"
                android:inputType="textPassword"
                android:hint="type here..."
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

        <Button
            android:id="@+id/login_button"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:background="@drawable/button_round_edges2"
            android:text="@string/login"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:background="@drawable/button_round_edges2"
            android:text="@string/signup" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>